rust/foxglove-ws-protocol/src/client/snapshots/foxglove_ws_protocol__client__set_parameters__tests__encode.snap
---
source: src/client/set_parameters.rs
expression: message()
---
{
  "op": "setParameters",
  "parameters": [
    {
      "name": "empty"
    },
    {
      "name": "f64",
      "type": "float64",
      "value": 1.23
    },
    {
      "name": "f64[]",
      "type": "float64_array",
      "value": [
        1.23,
        4.56
      ]
    },
    {
      "name": "byte[]",
      "type": "byte_array",
      "value": "ECAw"
    },
    {
      "name": "bool",
      "value": true
    }
  ],
  "id": "request-123"
}
